# openairinterface5g

./: .clang-format  .gitignore  .travis.yml  Develop-Records.txt  Info_on_merge.txt  Makefile  NOTICE.txt  README-onf.md  README.md  README.txt  attach_accept.pcapng  d2d_emulator_setup.txt  freq_range  maketags  nfapi-L2-emulator-setup.txt  oaienv  open-nfapi.oai.patch  record.txt  relay_UE_routing.sh  remote_UE_routing.sh
channel_simulator/: Makefile  README.x2_handover  channel_simulator.c  channel_simulator.h  connection_manager.c  connection_manager.h  main.c  utils.c  utils.h
ci-scripts/: Jenkinsfile-OAI-gNB-UE  Jenkinsfile-gitlab  Jenkinsfile-gitlab-nb-iot  Jenkinsfile-gitlab-replay  Jenkinsfile-tmp-full-ran  Jenkinsfile-tmp-ran  buildOnVM.sh  createVM.sh  main.py  oai-ci-vm-tool  reportTestLocally.sh  runTestOnVM.sh  test-boris-Jenkinsfile
cmake_targets/: CMakeLists.txt  build_oai  enb.band7.tm1.50PRB.usrpb210.conf_sim2  iris-command.txt
common/: ran_context.h
doc/: TESTING_GNB_W_COTS_UE.md
docker/: Dockerfile.base.centos.7.6.1810  Dockerfile.base.ubuntu.16.04  Dockerfile.base.ubuntu.18.04  Dockerfile.eNB.rhel8.2.oc4-4  Dockerfile.enb  Dockerfile.enb.centos.7.6.1810  Dockerfile.enb.ubuntu.16.04  Dockerfile.gNB.rhel7.oc4-4  (+9 more)
openair2/RIC_AGENT/ricsim/: CMakeLists.txt  build_ricsim  e2ap_asn1c_codec.c  e2ap_asn1c_codec.h  e2ap_message_handler.cpp  e2ap_message_handler.hpp  encode_e2apv1.cpp  encode_e2apv1.hpp  encode_kpm.cpp  encode_kpm.hpp  ricsim.cpp  ricsim.hpp  ricsim_defs.cpp  ricsim_defs.h  ricsim_sctp.cpp  ricsim_sctp.hpp
openair2/RIC_AGENT/ricsim/ASN1c/: C-RNTI.c  C-RNTI.h  CU-CP-Usage-Report-CellResourceReportItem.c  CU-CP-Usage-Report-CellResourceReportItem.h  CU-CP-Usage-Report-Per-UE.c  CU-CP-Usage-Report-Per-UE.h  CU-CP-Usage-Report-UeResourceReportItem.c  CU-CP-Usage-Report-UeResourceReportItem.h  CU-UP-Usage-Report-CellResourceReportItem.c  CU-UP-Usage-Report-CellResourceReportItem.h  CU-UP-Usage-Report-Per-UE.c  CU-UP-Usage-Report-Per-UE.h  CU-UP-Usage-Report-UeResourceReportItem.c  CU-UP-Usage-Report-UeResourceReportItem.h  CUUPMeasurement-Container.c  CUUPMeasurement-Container.h  Cause.c  Cause.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRIC.c  CauseRIC.h  CauseRICservice.c  CauseRICservice.h  CauseTransport.c  CauseTransport.h  CellResourceReportListItem.c  CellResourceReportListItem.h  Criticality.c  Criticality.h  CriticalityDiagnostics-IE-Item.c  CriticalityDiagnostics-IE-Item.h  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics-IE-List.h  CriticalityDiagnostics.c  CriticalityDiagnostics.h  DU-Usage-Report-CellResourceReportItem.c  DU-Usage-Report-CellResourceReportItem.h  (+287 more)
(+1548 files in other folders)
